// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > calls the onClick function when clicked 1`] = `
<button
  class="ds:flex ds:cursor-pointer ds:px-6 ds:rounded-[30px] ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-md ds:active:underline ds:focus-visible:underline ds:hover:not-disabled:underline ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-white ds:text-black ds:focus-visible:outline-secondary-1-dark ds:hover:text-secondary-1-dark ds:active:text-secondary-1-dark-2 ds:focus-visible:text-secondary-1-dark"
  type="button"
>
  <span
    class="ds:group-hover:underline ds:group-active:no-underline ds:group-focus-visible:no-underline ds:py-4"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button as disabled 1`] = `
<button
  class="ds:flex ds:cursor-pointer ds:px-6 ds:rounded-[30px] ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-md ds:active:underline ds:focus-visible:underline ds:hover:not-disabled:underline ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-white ds:text-inactive-gray"
  disabled=""
  type="button"
>
  <span
    class="ds:py-4"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with the correct label 1`] = `
<button
  class="ds:flex ds:cursor-pointer ds:px-6 ds:rounded-[30px] ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-md ds:active:underline ds:focus-visible:underline ds:hover:not-disabled:underline ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-white ds:text-black ds:focus-visible:outline-secondary-1-dark ds:hover:text-secondary-1-dark ds:active:text-secondary-1-dark-2 ds:focus-visible:text-secondary-1-dark"
  type="button"
>
  <span
    class="ds:group-hover:underline ds:group-active:no-underline ds:group-focus-visible:no-underline ds:py-4"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with the correct size 1`] = `
<button
  class="ds:flex ds:cursor-pointer ds:px-6 ds:rounded-[30px] ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-sm ds:active:underline ds:focus-visible:underline ds:hover:not-disabled:underline ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-white ds:text-black ds:focus-visible:outline-secondary-1-dark ds:hover:text-secondary-1-dark ds:active:text-secondary-1-dark-2 ds:focus-visible:text-secondary-1-dark"
  type="button"
>
  <span
    class="ds:group-hover:underline ds:group-active:no-underline ds:group-focus-visible:no-underline ds:py-2"
  >
    Click me
  </span>
</button>
`;

exports[`Button > renders the button with the correct variant 1`] = `
<button
  class="ds:flex ds:cursor-pointer ds:px-6 ds:rounded-[30px] ds:items-center ds:gap-4 ds:select-none ds:group ds:text-button-md ds:active:underline ds:focus-visible:underline ds:hover:not-disabled:underline ds:outline-offset-2 ds:disabled:cursor-not-allowed ds:bg-secondary-1-dark ds:active:bg-secondary-1-dark-2 ds:focus-visible:outline-secondary-1-dark ds:text-white"
  type="button"
>
  <span
    class="ds:group-hover:underline ds:group-active:no-underline ds:group-focus-visible:no-underline ds:py-4"
  >
    Click me
  </span>
</button>
`;
